Fixed a minor layout issue on the top-page of the assisted living page

--- a/static/unminified-static/stylesheets/page.css
+++ b/static/unminified-static/stylesheets/page.css
@@ -45,7 +45,7 @@
     display: flex;
     align-items: center;
     width: 600px;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 .assisted-living-page-container.right-side img {
@@ -83,6 +83,7 @@ main.page-content {
     
     .assisted-living-page-container.right-side {
         width: 80%;
+        justify-content: center;
     }
 }
 
